// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusyIndicator Basic Test 1`] = `
<ui5-busyindicator
  active="true"
  class=""
  size="Large"
/>
`;

exports[`BusyIndicator Inactive 1`] = `
<ui5-busyindicator
  class=""
  size="Large"
/>
`;

exports[`BusyIndicator Size Medium 1`] = `
<ui5-busyindicator
  active="true"
  class=""
  size="Medium"
/>
`;

exports[`BusyIndicator Size Small 1`] = `
<ui5-busyindicator
  active="true"
  class=""
  size="Small"
/>
`;
